feat: add 2023 day 5

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,9 @@
     "*.conf": "ini",
     "ostream": "cpp",
     "iosfwd": "cpp"
-  }
+  },
+  "deno.enable": true,
+  "deno.lint": true,
+  "deno.unstable": false,
+  "editor.tabSize": 4
 }
